# budgie-desktop

src/applets/: meson.build
src/applets/neotifications/: NeotificationsApplet.plugin.in  NeotificationsApplet.vala  meson.build
